# brainflow2

./: .gitattributes  .gitignore  AGENTS.md  BINARY_IPC_TEST_GUIDE.md  CLAUDE.md  Cargo.toml  FIX_COORDINATE_ISSUE_SUMMARY.md  GROUP_MAP_DISPLAY_IDEAS.md  INTENSITY_BUG_COMPLETE_ANALYSIS.md  INTENSITY_BUG_FILES.md  INTENSITY_FIXES_SUMMARY.md  Makefile  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PLUGIN_SYSTEM_COMPLETE.md  RAW_RGBA_FEATURE.md  RAW_RGBA_FIX_SUMMARY.md  RAW_RGBA_IMPLEMENTATION_PLAN.md  RAW_RGBA_RENDERING_CODE.txt  README.md  RGBA_DEBUG_STEPS.md  RGBA_FIX_PLAN.md  RGBA_FIX_SUMMARY.md  RGBA_INVESTIGATION_SUMMARY.md  RGBA_STATUS_UPDATE.md  STATUSBAR_FIXES_SUMMARY.md  STATUSBAR_REFACTOR_SUMMARY.md  SURFACE_PARITY_PLAN.md  TEST_CROSSHAIR.md  VERIFY_BINARY_IPC.md  VISION.md  build-all.sh  check_debug_output.js  check_rgba_state.js  create_toy_nifti.py  debug_colormap.rs  debug_shader.wgsl  debug_viewstate.js  deny.toml  dev_log.txt  diagnose_rgba_final.js  (+47 more)
core/api_bridge/: ADDING_COMMANDS.md  AGENTS.md  Cargo.toml  ENHANCEMENTS_SUMMARY.md  build.rs  gpu-info-enhancements.md
core/api_bridge/bindings/: AtlasLoadResult.ts  AtlasMetadata.ts  AtlasStats.ts  ErrorDisplay.ts  HistogramBin.ts  HistogramResult.ts  LayerSpec.ts  SliceAxis.ts  VolumeBounds.ts
core/api_bridge/docs/: gpu_slice_extraction.md
core/api_bridge/permissions/: default.toml
core/api_bridge/src/: analysis.rs  error_context.rs  error_helpers.rs  lib.rs  user_errors.rs
core/api_bridge/tests/: affine_transform_test.rs  basic_tests.rs  gpu_upload_tests.rs  integration_tests.rs  multi_volume_overlay_test.rs  multi_volume_stress_test.rs  pipeline_integration_test.rs  render_pipeline_validation.rs  render_validation_integration.rs  render_view_error_test.rs  render_view_smoke_test.rs  sampling_tests.rs
core/atlases/: AGENTS.md  Cargo.toml
core/atlases/bindings/: AtlasCatalogEntry.ts  AtlasCategory.ts  AtlasConfig.ts  AtlasDataType.ts  AtlasError.ts  AtlasFilter.ts  AtlasLoadProgress.ts  AtlasLoadResult.ts  AtlasSource.ts  AtlasType.ts  CacheStats.ts  LoadingStage.ts  ParcelBindingCoveragePreview.ts  ParcellationReference.ts  ResolutionInfo.ts  SpaceInfo.ts  SurfaceAtlasLabelInfo.ts  SurfaceAtlasLoadResult.ts  SurfaceLabelParcellationImportResult.ts  TemplateResolution.ts  TemplateSpace.ts
core/atlases/src/: catalog.rs  lib.rs  service.rs  test_atlas_loading.rs  types.rs
core/bridge_types/: AGENTS.md  Cargo.toml
core/bridge_types/bindings/: AlphaMaskHandle.ts  AlphaMaskMeta.ts  AnalysisArtifact.ts  AnalysisArtifactKind.ts  AnalysisInput.ts  AnalysisInputKind.ts  AnalysisStartRequest.ts  BatchRenderRequest.ts  ClusterMaskParams.ts  ClusterSummary.ts  ComputeAlphaMaskResult.ts  Connectivity.ts  FlatNode.ts  LayerPatch.ts  LoadedContent.ts  MaskKind.ts  SliceAxisMeta.ts  SliceInfo.ts  SurfaceGeometryData.ts  SurfaceHandle.ts  TimeSeriesInfo.ts  VolumeLayerGpuInfo.ts
core/bridge_types/src/: lib.rs
core/loaders/: AGENTS.md  Cargo.toml  mod.rs
core/loaders/gifti/: Cargo.toml
core/loaders/nifti/: Cargo.toml
core/neuro-core/: AGENTS.md  Cargo.toml
core/neuro-core/src/: error.rs  layer.rs  lib.rs  slice_builder.rs  slice_spec.rs  volume_store.rs
core/neuro-cpu/: AGENTS.md  Cargo.toml
core/neuro-cpu/src/: blending.rs  ellipsoid_renderer.rs  interpolation.rs  lib.rs  volume_renderer.rs
core/neuro-integration-tests/: AGENTS.md  Cargo.toml  ELLIPSOID_TESTING.md  README.md  VISUAL_DEBUG_GUIDE.md  test_output.txt
core/neuro-integration-tests/benches/: ellipsoid_benchmarks.rs  performance_comparison.rs
core/neuro-integration-tests/dashboard_assets/: differential_dashboard.css  differential_dashboard.js
core/neuro-integration-tests/enhanced_dashboard_output/: enhanced_dashboard.html  enhanced_dashboard.js
core/neuro-integration-tests/integrated_test_output/: enhanced_dashboard.css  enhanced_dashboard.html
core/neuro-integration-tests/src/: comparison_harness.rs  differential_dashboard.rs  differential_harness.rs  ellipsoid_gpu_renderer.rs  ellipsoid_runner.rs  ellipsoid_tests.rs  ellipsoid_visualizer.rs  enhanced_visual_dashboard.rs  image_utils.rs  lib.rs  lib_simple.rs  orthogonal_dashboard.rs  orthogonal_renderer.rs  roi_overlay_dashboard.rs  simple_visual_dashboard.rs  test_utils.rs  visual_debug.rs  volume_fixtures.rs
core/neuro-integration-tests/static/: debug_report.css  debug_report.js
core/neuro-integration-tests/test_dashboard_output/: dashboard.css  dashboard.html  dashboard.js
core/neuro-integration-tests/tests/: baseline_imperative_test.rs  benchmark_shader_performance.rs  cpu_gpu_differential.rs  differential_dashboard_demo.rs  differential_ellipsoid_tests.rs  ellipsoid_validation.rs  ellipsoid_visualization_test.rs  enhanced_dashboard_test.rs  enhanced_metrics_test.rs  integrated_ellipsoid_test.rs  mni_orthogonal_dashboard.rs  orthogonal_dashboard_demo.rs  simple_ellipsoid_test.rs  test_declarative_api.rs  test_declarative_layer_config.rs  test_mni_declarative.rs  test_mni_declarative.rs.bak  test_mni_optimized_shader.rs  test_roi_layer_overlay.rs  test_viewstate_helpers.rs  test_volume_registration.rs  visual_dashboard_test.rs
core/neuro-types/: AGENTS.md  Cargo.toml
core/neuro-types/src/: layer_spec.rs  lib.rs  metrics.rs  provider.rs  shapes.rs  slice_spec.rs  testing.rs  view_rect.rs  volume.rs
core/render_loop/: AGENTS.md  Cargo.toml  README.md  RENDER_TARGET_POOLING.md  build.rs
core/render_loop/benches/: upload.rs
core/render_loop/shaders/: README.md  basic.wgsl  slice_debug.wgsl  slice_debug2.wgsl  slice_debug3.wgsl  slice_debug_sampling.wgsl  slice_debug_simple.wgsl  slice_debug_texture.wgsl  slice_simple.wgsl  slice_simplified.wgsl  slice_storage.wgsl  slice_world_space.wgsl  test.wgsl  (+3 more)
core/render_loop_benches/: AGENTS.md  Cargo.toml
core/templates/: AGENTS.md  Cargo.toml
core/volmath/: AGENTS.md  Cargo.toml
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: api-bridge.json  default.json
src-tauri/icons/: icon.icns  placeholder.txt
src-tauri/src/: lib.rs  main.rs  menu_builder.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+2215 files in other folders)
