[package]
name = "brainflow"
version = "0.1.0"
description = "High-performance neuroimaging visualization"
authors = ["Brainflow Team"]
license = "MIT"
repository = "https://github.com/bbuchsbaum/brainflow2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# wgsl_to_wgpu = "0.13.1"   # ← comment out for now



[dependencies]
# Core ───────────────────────────────────────────────────────────
tauri        = { version = "^2.2", features = ["wry"] }
# Note: tauri-build is only needed in [build-dependencies]

# Plugins ────────────────────────────────────────────────────────

tauri-plugin-dialog = { version = "2.2.1" }
tauri-plugin-shell  = { version = "2.2.1" }
tauri-plugin-fs     = { version = "2.2.1" }
tauri-plugin-log    = { workspace = true } # Added back logging plugin
tauri-plugin-window-state = { version = "^2.2" } # Keep commented if not used yet

# Serialization ──────────────────────────────────────────────────
serde = { workspace = true } # Added back
serde_json = "1.0" # Added back

# Async & Utilities ─────────────────────────────────────────────
tokio = { version = "1", features = ["rt-multi-thread"] } # Added back
uuid = { version = "1", features = ["v4"] } # Added back
futures = "0.3" # Added back
thiserror = "1.0" # Added back

# Logging & Tracing ─────────────────────────────────────────────
log = "0.4" # Added back
tracing = { workspace = true } # Added back
tracing-subscriber = { workspace = true } # Added back 
tracing-log = "0.2" # Added back

# Windowing ─────────────────────────────────────────────────────
raw-window-handle = "0.6" # Added back

# Local Workspace Crates ───────────────────────────────────────
nalgebra = { workspace = true } # Added back nalgebra (often needed with local crates)
volmath = { path = "../core/volmath" } # Added back
bridge_types = { path = "../core/bridge_types" } # Added back
nifti-loader = { path = "../core/loaders/nifti" } # Added back
render_loop = { path = "../core/render_loop" } # Added back
api-bridge = { path = "../core/api_bridge", package = "api-bridge" } # Added back

[build-dependencies]
tauri-build = { workspace = true } # Added back build dependency

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
