[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
fs_extra = "1.3.0"
glob = "0.3.1"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
walkdir = "2.4.0"
ts-rs = { workspace = true, features = ["serde-compat"] } 