[package]
name = "atlases"
version = "0.1.0"
edition = "2021"

[dependencies]
neuroatlas = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
ts-rs = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
neurosurf-rs = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
tracing-test = "0.2"

[features]
default = ["surface"]
surface = ["neuroatlas/surface"]
