[package]
name = "neuro-cpu"
version = "0.1.0"
edition = "2021"
authors = ["Brainflow Team"]
description = "CPU reference implementation for neuroimaging slice extraction"
license = "MIT"

[dependencies]
neuro-types = { path = "../neuro-types" }
neuro-core = { path = "../neuro-core" }
colormap = { path = "../colormap" }
volmath = { path = "../volmath" }
nalgebra = { workspace = true }
rayon = "1.7"
anyhow = "1.0"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"

