[package]
name = "render_loop_benches"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
pollster = "0.3"
rand = "0.8"
wgpu = { workspace = true }
render_loop = { path = "../render_loop" }
bytemuck = { version = "1", features = ["derive"] }

[[bench]]
name = "upload"
harness = false

[[bench]]
name = "render_time"
harness = false
