[package]
name = "templates"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
ts-rs = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2.5"
uuid = { version = "1.0", features = ["v4"] }
templateflow = { path = "/Users/bbuchsbaum/code/rust/templateflow-rs/templateflow-rs" }

# Volume loading dependencies
bridge_types = { path = "../bridge_types" }
nifti_loader = { path = "../loaders/nifti", package = "nifti-loader" }
brainflow_loaders = { path = "../loaders", package = "brainflow-loaders" }
volmath = { path = "../volmath" }

[dev-dependencies]
tempfile = "3.0"
tracing-test = "0.2"

[features]
default = []