[package]
name = "volmath"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
ts-rs = { version = "8.0", features = ["serde-compat"] }
serde = { version = "1.0", features = ["derive"] }
nalgebra = { version = "0.32", features = ["serde-serialize"] }
bytemuck = "1.12"
num-traits = "0.2"
thiserror = "1.0"
once_cell = "1"
rayon = "1.5"
approx = "0.5"
wasm-bindgen = "0.2"
half = { version = "2.3", features = ["serde", "bytemuck"] }

[dev-dependencies]
approx = "0.5"
wasm-bindgen-test = "0.3"
console_error_panic_hook = "0.1"

[features]
default = []
# parallel = ["rayon"]
# gpu = ["wgpu"] # Placeholder
